--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header Section -->
     <header>
         <nav>
             <ul>
@@ -42,7 +41,7 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- Achievements Section -->
     <section id="projects" class="section">
         <h2>Achievement</h2>
         <div class="project-list">
@@ -108,10 +107,6 @@
         <p id="formMessage" class="hidden"></p>
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <p>© 2024 John Doe. All Rights Reserved.</p>
-    </footer>
 
     <script src="script.js"></script>
 </body>
